# Convoy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  convoy_layout.ini  roadmap.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  BUILD.md  BUILD_STATUS.md  CODE_STYLE.md  DEVELOPMENT.md  MODULES.md  QUICK_START.md  README.md  TROUBLESHOOTING.md
docs/plans/: 2026-04-08-convoy-fase1-design.md  2026-04-08-convoy-fase1-implementation.md  2026-04-09-caf-exporter-implementation.md  2026-04-09-caf-format-design.md  2026-04-09-cicd-release-design.md  2026-04-09-convoy-cicd-pipeline.md  2026-04-09-convoy-frontend-overhaul.md  2026-04-10-docking-system-design.md  2026-04-10-project-documentation.md
src/cmake/: FindGLAD.cmake  FindGLFW.cmake  FindGLFW3.cmake  FindImGui.cmake
src/convoy/: main.cpp
src/core/: command_manager.cpp  command_manager.h  cvp_format.cpp  cvp_format.h  event_bus.cpp  event_bus.h  filesystem.cpp  filesystem.h  keybind_manager.cpp  keybind_manager.h  logger.h  project_template.cpp  project_template.h  settings_config.cpp  settings_config.h  window_manager.cpp  window_manager.h
src/core/commands/: command.h  pixel_command.cpp  pixel_command.h
src/core/export/: basic_exporters.cpp  caf_exporter.cpp  caf_exporter.h  export_manager.cpp  exporter_plugin_interface.h
src/core/gfx/: render_texture.cpp  render_texture.h
src/core/input/: input_handler.cpp  input_handler.h
src/core/plugins/: hook_system.cpp  hook_system.h  plugin_interface.h  plugin_registry.cpp  plugin_registry.h  ui_component.h
src/core/ui/: dockspace_manager.cpp  dockspace_manager.h  export_wizard.cpp  export_wizard.h  main_menu_bar.cpp  main_menu_bar.h  new_project_dialog.cpp  new_project_dialog.h  preferences_window.cpp  preferences_window.h  pressure_curve_editor.cpp  pressure_curve_editor.h  theme_manager.cpp  theme_manager.h
src/modules/mod_architect/: architect_ui.cpp  architect_ui.h  canvas.cpp  canvas.h  viewport.cpp  viewport.h
src/modules/mod_architect/tools/: brush_stroke.cpp  brush_stroke.h  bucket_tool.cpp  bucket_tool.h  eraser_tool.cpp  eraser_tool.h  hitbox_tool.cpp  hitbox_tool.h  pencil_tool.cpp  pencil_tool.h  pivot_tool.cpp  pivot_tool.h  tool_base.h
src/modules/mod_architect/ui/: brush_settings.cpp  brush_settings.h  color_palette.cpp  color_palette.h  dod_visualizer.cpp  dod_visualizer.h  live_preview.cpp  live_preview.h
src/modules/mod_forge/: forge_ui.cpp  forge_ui.h
src/modules/mod_sequencer/: sequencer_ui.cpp  sequencer_ui.h
src/modules/mod_walker/: walker_ui.cpp  walker_ui.h
src/shared/: brush.cpp  brush.h  color.h  color_math.cpp  color_math.h  math.h  project_mode.cpp  project_mode.h  types.h
tests/: CMakeLists.txt  integration_test.cpp  test_architect_ui.cpp  test_brush.cpp  test_caf_exporter.cpp  test_canvas.cpp  test_command_manager.cpp  test_cvp_format.cpp  test_dod_visualizer.cpp  test_hook_system.cpp  test_input_handler.cpp  test_math.cpp  test_plugin_registry.cpp  test_project_mode.cpp  test_tools.cpp  test_viewport_zoom.cpp  test_window_manager.cpp
ver/builds/: BUILD_INFO.md
